<resources>
    <string name="app_name">TODOMan</string>
            <string name="taskNew">Agregar nueva tarea</string>
    <string name="contentTitle">Detalles de la tarea</string>
    <string name="taskName">Nombre de la tarea</string>
    <string name="taskDescription">Descripción</string>
    <string name="taskDateAndTime">�Cuándo vence?</string>
    <string name="taskChangeDate">Cambiar</string>
    <string name="taskCompleted">�Completada?</string>
    <string name="taskSave">Guardar</string>
    <string name="taskClear">Limpiar</string>
    <string name="taskCancel">Cancelar</string>
    <string name="taskChangeTime">Cambiar</string>
    <string name="validityName">El campo Nombre no puede estar vacío</string>
    <string name="validityDescription">El campo Descripción no puede estar vacío</string>
    <string name="validityDate">El campo Fecha no puede estar vacío</string>
    <string name="validityTime">El campo Hora no puede estar vacío</string>
    <string name="validityDialogName">Formulario incompleto</string>
    <string name="OkButton">Aceptar</string>
    <string name="taskNotification">La tarea ha vencido</string>
</resources>
