<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.uab.dedam.todoman.ContentFragment">

<TextView
    android:id="@+id/txv_contentTitle"
    android:text="@string/contentTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<TextView
    android:id="@+id/txv_taskName"
    android:text="@string/taskName"
    android:layout_below="@id/txv_contentTitle"
            android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txt_taskName"
        android:layout_below="@id/txv_taskName"
                android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txv_taskDescription"
        android:text="@string/taskDescription"
        android:layout_below="@id/txt_taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txt_taskDescription"
        android:layout_below="@id/txv_taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txv_taskDateAndTime"
        android:text="@string/taskDateAndTime"
        android:layout_below="@id/txt_taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_taskDateAndTime"
        android:text="Ahora mismo"
        android:layout_below="@id/txv_taskDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_taskDateAndTime"
        android:text="@string/taskChangeDate"
        android:layout_below="@id/txv_taskDateAndTime"
        android:layout_toRightOf="@id/txt_taskDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txv_taskCompleted"
        android:text="@string/taskCompleted"
        android:layout_below="@id/txt_taskDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ToggleButton
        android:id="@+id/tgl_taskCompleted"
        android:layout_below="@id/btn_taskDateAndTime"
        android:layout_toRightOf="@id/txv_taskCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_taskSave"
        android:text="@string/taskSave"
        android:layout_below="@id/txv_taskCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_taskClear"
        android:text="@string/taskClear"
        android:layout_below="@id/txv_taskCompleted"
        android:layout_toRightOf="@id/btn_taskSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_taskCancel"
        android:text="@string/taskCancel"
        android:layout_below="@id/txv_taskCompleted"
        android:layout_toRightOf="@id/btn_taskClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>